<resources>
    <string name="app_name">BikeCam</string>
    <string name="bt_status_text">Bluetooth</string>
    <string name="bt_switch_off_button">Turn off BT</string>
    <string name="bt_switch_on_button">Turn on BT</string>
    <string name="bt_devices_found">No devices found… yet!</string>
    <string name="bt_status_off">Disabled</string>
    <string name="bt_status_turning_on">Turning ON…</string>
    <string name="bt_status_turning_off">Turning OFF…</string>
    <string name="bt_status_on">Enabled</string>
    <string name="device_list_name">Devices:</string>
    <string name="bt_title">Bluetooth Status</string>
    <string name="bt_refresh_button">Refresh</string>
    <string name="bt_connect_button">Connect</string>
    <string name="bt_refresh_in_progress">Refresh in progress…</string>
    <string name="deviceInfoHeader">Device Info</string>
    <string name="DeviceInfoName">Name:</string>
    <string name="DeviceInfoStatus">Status:</string>
    <string name="DeviceInfoNameText">holder</string>
    <string name="DeviceInfoConnectButton">Connect</string>
    <string name="deviceInfoDetectionButton">Detection on</string>
    <string name="deviceInfoStatusText">holder</string>
    <string name="deviceListChooseButton">Choose</string>
    <string name="deviceCardPairButtonTextPair">Pair</string>
    <string name="deviceCardConnectButtonConnect">Connect</string>
    <string name="deviceCardPairButtonTextUnpair">Unpair</string>
    <string name="deviceCardConnectButtonTextDisconnect">Disconnect</string>
</resources>